; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_event.c_mac80211_ev_michael_mic_failure.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_event.c_mac80211_ev_michael_mic_failure.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_sub_if_data = type { i32 }
%struct.ieee80211_hdr = type { i32*, i32 }

@NL80211_KEYTYPE_GROUP = common dso_local global i32 0, align 4
@NL80211_KEYTYPE_PAIRWISE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac80211_ev_michael_mic_failure(%struct.ieee80211_sub_if_data* %0, i32 %1, %struct.ieee80211_hdr* %2, i32* %3, i32 %4) #0 {
  %6 = alloca %struct.ieee80211_sub_if_data*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.ieee80211_hdr*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store %struct.ieee80211_sub_if_data* %0, %struct.ieee80211_sub_if_data** %6, align 8
  store i32 %1, i32* %7, align 4
  store %struct.ieee80211_hdr* %2, %struct.ieee80211_hdr** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load %struct.ieee80211_sub_if_data*, %struct.ieee80211_sub_if_data** %6, align 8
  %12 = getelementptr inbounds %struct.ieee80211_sub_if_data, %struct.ieee80211_sub_if_data* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.ieee80211_hdr*, %struct.ieee80211_hdr** %8, align 8
  %15 = getelementptr inbounds %struct.ieee80211_hdr, %struct.ieee80211_hdr* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.ieee80211_hdr*, %struct.ieee80211_hdr** %8, align 8
  %18 = getelementptr inbounds %struct.ieee80211_hdr, %struct.ieee80211_hdr* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 0
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, 1
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %5
  %25 = load i32, i32* @NL80211_KEYTYPE_GROUP, align 4
  br label %28

26:                                               ; preds = %5
  %27 = load i32, i32* @NL80211_KEYTYPE_PAIRWISE, align 4
  br label %28

28:                                               ; preds = %26, %24
  %29 = phi i32 [ %25, %24 ], [ %27, %26 ]
  %30 = load i32, i32* %7, align 4
  %31 = load i32*, i32** %9, align 8
  %32 = load i32, i32* %10, align 4
  %33 = call i32 @cfg80211_michael_mic_failure(i32 %13, i32 %16, i32 %29, i32 %30, i32* %31, i32 %32)
  ret void
}

declare dso_local i32 @cfg80211_michael_mic_failure(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
